<resources>
    <string name="app_name">SpeechToText</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="english_text">English Text</string>
    <string name="turkish_text">Turkish Text</string>
    <string name="check_internet">Please check your Internet Connection</string>
    <string name="lang_validation">Source and Target Languages are same</string>
    <string name="pls_wait">Please wait a minute</string>
    <string name="label_exit_alert">Press once again to exit!</string>
    <string name="source_language">Source Language</string>
    <string name="target_language">Target Language</string>
    <string name="near_east_university">Near East University - International Research Center for AI and IoT</string>
    <string name="no_event_today">Today you have no events</string>
    <string name="google_cal">Kindly install Google Calender application</string>

</resources>
